feat: claim model, service, repository, controller/ spec api
